--- a/src/aboutSidebar.css
+++ b/src/aboutSidebar.css
@@ -2,10 +2,13 @@
     position: fixed;
     top: 0;
     right: -300px;
-    width: 20vw;
+    width: 40vw;
     height: 100%;
-    background-color: lightblue;
+    border-radius: 10%;
+    background-color: white;
     transition: right 0.3s ease-in-out;
+    box-shadow: -4px 0 10px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
   }
   
   .aboutSidebar.open {
